<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/empresa"
            android:icon="@drawable/ic_nature_people"
            android:title="@string/nuestra_empresa" />
        <item
            android:id="@+id/equipo"
            android:icon="@drawable/ic_group"
            android:title="@string/nuestro_equipo" />
        <item
            android:id="@+id/servicios"
            android:icon="@drawable/ic_work"
            android:title="@string/servicios" />

        <item
            android:id="@+id/produccion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/operadores_de_producci_n" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact_phone"
            android:title="@string/contactanos" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_face"
            android:title="@string/acerca_de_nosotros" />

    </group>

</menu>
